--- a/notebooks/01_Python_Fundamentals.ipynb
+++ b/notebooks/01_Python_Fundamentals.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/EarthSystem-Science-Lab/python-basics/blob/main/notebooks/01_Python_Fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rsgis2025trupti-wq/python-basics/blob/main/notebooks/01_Python_Fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,12 +66,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "d08fb971",
       "metadata": {
-        "id": "d08fb971"
+        "id": "d08fb971",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2a8a0ba-c65e-40dd-8361-3b4d6c2f094f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello from Google Colab! 👋\n"
+          ]
+        }
+      ],
       "source": [
         "# Run this cell to test that Colab works.\n",
         "print(\"Hello from Google Colab! 👋\")"
@@ -113,12 +125,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "b7871327",
       "metadata": {
-        "id": "b7871327"
+        "id": "b7871327",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77a03b50-a9c7-4f8b-efc9-a865987afea5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "# Just an expression – notebook will display the result\n",
         "2 + 3"
@@ -126,12 +153,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "e07c5bfc",
       "metadata": {
-        "id": "e07c5bfc"
+        "id": "e07c5bfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2467f72a-3a6e-4e05-d6e8-6054b784278d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ],
       "source": [
         "# Now using print()\n",
         "print(2 + 3)"
@@ -158,23 +197,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "df65b501",
       "metadata": {
-        "id": "df65b501"
+        "id": "df65b501",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ddad20ee-b35a-4279-a51b-6f29fc933bec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "trupti sutar\n",
+            "msc remote sensing and gis\n",
+            "ocean colour\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Fill in your details and run the cell.\n",
         "\n",
         "# 1. Print your name\n",
-        "\n",
+        "print(\"trupti sutar\")\n",
         "\n",
         "# 2. Print your programme name\n",
-        "\n",
+        "print(\"msc remote sensing and gis\")\n",
         "\n",
         "# 3. Print one topic you want to analyse using Python\n",
-        "\n"
+        "print(\"ocean colour\")\n"
       ]
     },
     {
@@ -236,30 +289,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "421c6a0b",
       "metadata": {
-        "id": "421c6a0b"
+        "id": "421c6a0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8004b793-12ba-48a1-b1ba-ffcb14263e42"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average days per month ≈ 30.416666666666668\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: complete the definitions and calculations\n",
         "\n",
         "# What do you expect the answer to be (approximately)?\n",
-        "# Expected value of average days per month: __________\n",
+        "# Expected value of average days per month: __30_______\n",
         "\n",
         "\n",
         "# 1. Number of days in a year\n",
-        "days_in_year =\n",
+        "days_in_year =365\n",
         "\n",
         "# 2. Number of months in a year\n",
-        "months =\n",
+        "months =12\n",
         "\n",
         "# 3. Compute the average number of days per month\n",
-        "avg_days_per_month =\n",
+        "avg_days_per_month =days_in_year/months\n",
         "\n",
         "# 4. Print the result using an f-string\n",
-        "\n"
+        "\n",
+        "print(f\"Average days per month ≈ {avg_days_per_month}\")"
       ]
     },
     {
@@ -301,19 +367,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "2572295c",
       "metadata": {
-        "id": "2572295c"
+        "id": "2572295c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "905f6d0b-cbfa-490c-ea75-6696377e3a01"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "year: 2025 type: <class 'int'>\n",
+            "sst: 28.5 type: <class 'float'>\n",
+            "city: Goa type: <class 'str'>\n",
+            "rainy: True type: <class 'bool'>\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Create variables and inspect their types.\n",
         "\n",
-        "year =\n",
-        "sst =\n",
-        "city =\n",
-        "rainy =\n",
+        "year =(2025) #int\n",
+        "sst =(28.5)  #float\n",
+        "city =(\"Goa\") #str\n",
+        "rainy =(True) #bool\n",
         "\n",
         "print(\"year:\", year, \"type:\", type(year))\n",
         "print(\"sst:\", sst, \"type:\", type(sst))\n",
@@ -366,12 +447,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "54cc3de0",
       "metadata": {
-        "id": "54cc3de0"
+        "id": "54cc3de0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "90a6bbf3-6715-450a-9219-98ab51478dcf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-850723611.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Step 3: try adding them (uncomment to see the error)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Step 4: fix the addition by converting b to integer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ],
       "source": [
         "# Step 1: define variables\n",
         "a = 10\n",
@@ -381,10 +479,11 @@
         "\n",
         "\n",
         "# Step 3: try adding them (uncomment to see the error)\n",
-        "# a + b\n",
+        "a + b\n",
         "\n",
         "# Step 4: fix the addition by converting b to integer\n",
-        "\n"
+        "\n",
+        "str(b) # b (integer to string )"
       ]
     },
     {
@@ -427,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "4cf37a61",
       "metadata": {
         "id": "4cf37a61"
@@ -437,10 +536,10 @@
         "# TODO: add comments and compute a small average.\n",
         "\n",
         "# define SST values for two days\n",
-        "\n",
-        "\n",
+        "sst_day1 = 28.3\n",
+        "sst_day2 = 28.7\n",
         "# compute average SST of the two days\n",
-        "\n",
+        "average_sst = (sst_day1 + sst_day2) / 2\n",
         "\n",
         "# print the result with units\n",
         "\n"
@@ -768,6 +867,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
