--- a/notebooks/01_Python_Fundamentals.ipynb
+++ b/notebooks/01_Python_Fundamentals.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "d08fb971",
       "metadata": {
         "id": "d08fb971",
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "b7871327",
       "metadata": {
         "id": "b7871327",
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "e07c5bfc",
       "metadata": {
         "id": "e07c5bfc",
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "df65b501",
       "metadata": {
         "id": "df65b501",
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "421c6a0b",
       "metadata": {
         "id": "421c6a0b",
@@ -367,14 +367,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "id": "2572295c",
       "metadata": {
         "id": "2572295c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "905f6d0b-cbfa-490c-ea75-6696377e3a01"
+        "outputId": "e6a875b4-f129-4038-8bd1-10c904745f2a"
       },
       "outputs": [
         {
@@ -447,27 +447,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "id": "54cc3de0",
       "metadata": {
         "id": "54cc3de0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90a6bbf3-6715-450a-9219-98ab51478dcf"
+        "outputId": "70141af7-8a22-472b-86a7-4805e1801f7c"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-850723611.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Step 3: try adding them (uncomment to see the error)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Step 4: fix the addition by converting b to integer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "type of a: <class 'int'>\n",
+            "type of b : <class 'int'>\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ],
       "source": [
@@ -476,14 +482,15 @@
         "b = \"20\"\n",
         "\n",
         "# Step 2: check types\n",
+        "print(\"type of a:\", type(a))\n",
+        "print(\"type of b :\",type(a))\n",
         "\n",
         "\n",
         "# Step 3: try adding them (uncomment to see the error)\n",
-        "a + b\n",
+        "a + int(b)\n",
         "\n",
         "# Step 4: fix the addition by converting b to integer\n",
-        "\n",
-        "str(b) # b (integer to string )"
+        "int(b)"
       ]
     },
     {
@@ -526,12 +533,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 4,
       "id": "4cf37a61",
       "metadata": {
-        "id": "4cf37a61"
+        "id": "4cf37a61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d250bdd-51c8-4967-c4ad-923c5093056a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average of two days SST = 28.5 °C\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: add comments and compute a small average.\n",
         "\n",
@@ -541,8 +560,8 @@
         "# compute average SST of the two days\n",
         "average_sst = (sst_day1 + sst_day2) / 2\n",
         "\n",
-        "# print the result with units\n",
-        "\n"
+        "# print the result with unit\n",
+        "print(\"Average of two days SST =\", average_sst, \"°C\")"
       ]
     },
     {
@@ -582,23 +601,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "6b2e3136",
       "metadata": {
-        "id": "6b2e3136"
+        "id": "6b2e3136",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "315caf9e-0150-4b32-92d9-a4b08f513889"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Surface temperature: 301.60 K\n",
+            "Air temperature: 303.10 K\n",
+            "DEEP temperature: 278.10 K\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Convert temperatures from °C to K.\n",
         "\n",
         "# 1. Define temperatures in Celsius\n",
-        "\n",
+        "T_surface = 28.5\n",
+        "T_air = 30.0\n",
+        "T_deep = 5.0\n",
         "\n",
         "# 2. Convert each to Kelvin\n",
+        "T_surface_K = T_surface + 273.1\n",
+        "T_air_K = T_air + 273.1\n",
+        "T_deep_K = T_deep + 273.1\n",
         "\n",
         "\n",
         "# 3. Print the results nicely\n",
-        "\n"
+        "\n",
+        "print(f\"Surface temperature: {T_surface_K:.2f} K\")\n",
+        "print(f\"Air temperature: {T_air_K:.2f} K\")\n",
+        "print(f\"DEEP temperature: {T_deep_K:.2f} K\")"
       ]
     },
     {
@@ -662,32 +703,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "d06eab3c",
       "metadata": {
-        "id": "d06eab3c"
+        "id": "d06eab3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "80fce308-dc73-4f9a-fd4b-48751e195c68"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "13\n",
+            "30\n",
+            "13.333333333333334\n",
+            "6.2\n",
+            "3.3333333333333335\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: compute the expressions below\n",
         "\n",
         "# 1. Addition\n",
-        "\n",
+        "print( 12+8)\n",
         "\n",
         "# 2. Subtraction\n",
         "\n",
-        "\n",
+        "print (20-7)\n",
         "# 3. Multiplication\n",
         "\n",
         "\n",
+        "print(5*6)\n",
         "# 4. Division\n",
-        "\n",
-        "\n",
+        "print(40/3)\n",
         "# 5. Decimal addition\n",
-        "\n",
-        "\n",
+        "print(2.5 + 3.7)\n",
         "# 6. Decimal division\n",
-        "\n"
+        "\n",
+        "print (10.0/3)"
       ]
     },
     {
@@ -745,12 +803,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "7e408a74",
       "metadata": {
-        "id": "7e408a74"
+        "id": "7e408a74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1d7902f-33b4-49dc-e0c6-cfdb90508d17"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean SST: 28.3\n",
+            "Median SST: 28.3\n",
+            "Mode SST: 28.3\n"
+          ]
+        }
+      ],
       "source": [
         "import statistics as stats\n",
         "\n",
@@ -762,7 +834,7 @@
         "median_sst = stats.median(sst)\n",
         "mode_sst = stats.mode(sst)\n",
         "\n",
-        "print(\"Mean SST:\", mean_sst)\n",
+        "print(\"Mean SST:\", mean_sst )\n",
         "print(\"Median SST:\", median_sst)\n",
         "print(\"Mode SST:\", mode_sst)"
       ]
@@ -818,12 +890,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "ef6a5e97",
       "metadata": {
-        "id": "ef6a5e97"
+        "id": "ef6a5e97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cba8e308-8210-407f-dbc3-70806996ce2f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correlation: -0.9933992677987826\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -832,12 +916,12 @@
         "temp = [28.1, 28.3, 28.4, 28.6, 28.7]\n",
         "chl  = [1.8, 1.7, 1.6, 1.5, 1.4]\n",
         "\n",
-        "temp_arr = np.array(temp)\n",
-        "chl_arr = np.array(chl)\n",
+        "temp_array = np.array(temp)\n",
+        "chl_array = np.array(chl)\n",
         "\n",
-        "corr = np.corrcoef(temp_arr, chl_arr)[0, 1]\n",
+        "correlation = np.corrcoef(temp_array, chl_array)[0, 1]\n",
         "\n",
-        "print(\"Correlation:\", corr)"
+        "print(\"Correlation:\", correlation)"
       ]
     },
     {
