--- a/notebooks/02_Lists_Loops_Conditions.ipynb
+++ b/notebooks/02_Lists_Loops_Conditions.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/EarthSystem-Science-Lab/python-basics/blob/main/notebooks/02_Lists_Loops_Conditions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rsgis2025trupti-wq/python-basics/blob/main/notebooks/02_Lists_Loops_Conditions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,19 +34,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "24d9c332",
       "metadata": {
-        "id": "24d9c332"
+        "id": "24d9c332",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2e28363-1f1d-46c2-b657-198633039eb0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First value: 28.1\n",
+            "Last value: 28.5\n",
+            "Length of list: 7\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Create your SST list and print first, last, and length.\n",
-        "sst =  # your SST list here\n",
+        "sst =  [28.1, 28.3, 28.0, 27.9, 28.4, 28.6, 28.5] # your SST list here\n",
+        "sst_first = sst[0]\n",
+        "sst_last = sst[-1]\n",
+        "sst_length = len(sst)\n",
         "\n",
-        "print(\"First value:\", )\n",
-        "print(\"Last value:\", )\n",
-        "print(\"Length of list:\", )"
+        "print(\"First value:\", sst_first)\n",
+        "print(\"Last value:\",sst_last )\n",
+        "print(\"Length of list:\",sst_length )"
       ]
     },
     {
@@ -62,17 +79,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "fc262344",
       "metadata": {
-        "id": "fc262344"
+        "id": "fc262344",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0c58773-642c-48a7-d185-db11a6d8f87a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "day 1 : temp 28.1\n",
+            "day 2 : temp 28.3\n",
+            "day 3 : temp 28.0\n",
+            "day 4 : temp 27.9\n",
+            "day 5 : temp 28.4\n",
+            "day 6 : temp 28.6\n",
+            "day 7 : temp 28.5\n",
+            "trupti sutar\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Print each SST value with day number.\n",
         "for i in range(len(sst)):\n",
         "    temp = sst[i]\n",
-        "    # print Day X: value\n"
+        "    #print(\"trupti sutar\")\n",
+        "    print(f\"day {i+1} : temp {temp}\")\n",
+        "    # print Day X: value\n",
+        "print(\"trupti sutar\")\n"
       ]
     },
     {
@@ -88,19 +127,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "id": "517e6b8c",
       "metadata": {
-        "id": "517e6b8c"
+        "id": "517e6b8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e5658bf-d342-45e1-95ef-5cedcac54fb4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean SST (loop): 4.071428571428571\n",
+            "Mean SST (built-in): 28.25714285714286\n"
+          ]
+        }
+      ],
       "source": [
         "total = 0\n",
         "\n",
         "for temp in sst:\n",
         "    pass\n",
         "\n",
-        "mean_sst =\n",
+        "mean_sst =temp /len(sst)\n",
+        "\n",
         "print(\"Mean SST (loop):\", mean_sst)\n",
         "print(\"Mean SST (built-in):\", sum(sst)/len(sst))"
       ]
@@ -215,6 +268,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
