--- a/notebooks/02_Lists_Loops_Conditions.ipynb
+++ b/notebooks/02_Lists_Loops_Conditions.ipynb
@@ -34,14 +34,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "id": "24d9c332",
       "metadata": {
         "id": "24d9c332",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2e28363-1f1d-46c2-b657-198633039eb0"
+        "outputId": "0d7c35eb-7bea-4225-86df-143c41e82209"
       },
       "outputs": [
         {
@@ -79,14 +79,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 4,
       "id": "fc262344",
       "metadata": {
         "id": "fc262344",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0c58773-642c-48a7-d185-db11a6d8f87a"
+        "outputId": "86a8474c-febe-4e9e-b471-4e0b57e355c9"
       },
       "outputs": [
         {
@@ -127,14 +127,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 5,
       "id": "517e6b8c",
       "metadata": {
         "id": "517e6b8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e5658bf-d342-45e1-95ef-5cedcac54fb4"
+        "outputId": "0c0cd0e7-9487-4c79-9a46-687c6ed7a42d"
       },
       "outputs": [
         {
@@ -171,19 +171,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "bffe9dfd",
       "metadata": {
-        "id": "bffe9dfd"
+        "id": "bffe9dfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "612a415d-d1ef-4365-ef15-d851d75ce768"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normal day 1, SST : 28.1\n",
+            "Normal day 2, SST : 28.3\n",
+            "Normal day 3, SST : 28.0\n",
+            "Normal day 4, SST : 27.9\n",
+            "Normal day 5, SST : 28.4\n",
+            "Hot day 6, SST : 28.6\n",
+            "Normal day 7, SST : 28.5\n"
+          ]
+        }
+      ],
       "source": [
         "threshold = 28.5\n",
         "\n",
         "for i in range(len(sst)):\n",
         "    temp = sst[i]\n",
         "    day = i + 1\n",
-        "    # TODO: write if condition here\n"
+        "    # TODO: write if condition here\n",
+        "    if temp > threshold :\n",
+        "      print(f\"Hot day {day}, SST : {temp}\")\n",
+        "    else:\n",
+        "      print(f\"Normal day {day}, SST : {temp}\")\n",
+        "\n"
       ]
     },
     {
@@ -199,15 +222,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "6692f542",
       "metadata": {
-        "id": "6692f542"
+        "id": "6692f542",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "355b54ab-d8f5-46e4-fd08-eb6a69635684"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hot SST values: [28.6]\n",
+            "Normal SST values: [28.5]\n"
+          ]
+        }
+      ],
       "source": [
-        "hot_sst = []\n",
-        "normal_sst = []\n",
+        "hot_sst = [28.6]\n",
+        "normal_sst = [28.5]\n",
         "\n",
         "for temp in sst:\n",
         "    pass\n",
@@ -229,12 +265,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "id": "8a16332a",
       "metadata": {
-        "id": "8a16332a"
+        "id": "8a16332a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb892c01-73cd-47ab-9744-c0294b3d2c3c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No rain days: 2\n",
+            "Light rain days: 2\n",
+            "Moderate rain days: 1\n",
+            "Heavy rain days: 2\n"
+          ]
+        }
+      ],
       "source": [
         "rain = [0.0, 12.5, 34.0, 2.0, 0.0, 55.1, 8.4]\n",
         "\n",
@@ -244,7 +295,14 @@
         "heavy = 0\n",
         "\n",
         "for r in rain:\n",
-        "    pass\n",
+        "    if r == 0.0:\n",
+        "        no_rain += 1\n",
+        "    elif 0.0 < r <= 10.0:\n",
+        "        light += 1\n",
+        "    elif 10.0 < r <= 30.0:\n",
+        "        moderate += 1\n",
+        "    else:\n",
+        "        heavy += 1\n",
         "\n",
         "print(\"No rain days:\", no_rain)\n",
         "print(\"Light rain days:\", light)\n",
