--- a/notebooks/03_Functions_and_Plotting.ipynb
+++ b/notebooks/03_Functions_and_Plotting.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/EarthSystem-Science-Lab/python-basics/blob/main/notebooks/03_Functions_and_Plotting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rsgis2025trupti-wq/python-basics/blob/main/notebooks/03_Functions_and_Plotting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "d6e73ad7",
       "metadata": {
         "id": "d6e73ad7"
@@ -147,16 +147,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c4ab7e0e",
       "metadata": {
-        "id": "c4ab7e0e"
+        "id": "c4ab7e0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "387fc083-5f08-4785-c060-01e537131d24"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "25\n",
+            "9\n"
+          ]
+        }
+      ],
       "source": [
         "def square(x):\n",
         "    # TODO: return x squared\n",
         "    pass\n",
+        "    return x * x\n",
         "\n",
         "print(square(2))\n",
         "print(square(5))\n",
@@ -466,6 +481,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
