--- a/notebooks/01_Python_Fundamentals.ipynb
+++ b/notebooks/01_Python_Fundamentals.ipynb
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "2572295c",
       "metadata": {
         "id": "2572295c",
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "54cc3de0",
       "metadata": {
         "id": "54cc3de0",
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "4cf37a61",
       "metadata": {
         "id": "4cf37a61",
@@ -601,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "6b2e3136",
       "metadata": {
         "id": "6b2e3136",
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "d06eab3c",
       "metadata": {
         "id": "d06eab3c",
@@ -803,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "7e408a74",
       "metadata": {
         "id": "7e408a74",
@@ -890,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "ef6a5e97",
       "metadata": {
         "id": "ef6a5e97",
@@ -936,12 +936,47 @@
         "Answer these questions in your own words:\n",
         "\n",
         "1. What is the difference between a **code cell** and a **text (Markdown) cell** in Colab?\n",
+        "\n",
+        "A code cell is where you write and run Python code\n",
+        "\n",
+        "It can do calculations, make plots, or process data.\n",
+        "A text (Markdown) cell is for writing explanations, notes, or titles\n",
+        "It doesn't run code it's just for organizing and describing your work.\n",
+        "\n",
         "2. Why is it useful to know the **type** of a variable?\n",
+        "\n",
+        "Knowing a variable's type tells you what it can do\n",
+        "For example, numbers can be added, but strings cannot\n",
+        "It helps prevent errors when you mix different types\n",
+        "It also makes your code easier to understand.\n",
+        "\n",
         "3. Describe one error you saw today and how you fixed it.\n",
+        "\n",
+        "One error I saw was a NameError because I spelled a variable wrong.\n",
+        "Python didn't recognize it, so the code stopped.\n",
+        "\n",
         "4. What mathematical operations did you find easiest?\n",
+        "\n",
+        "I found addition, subtraction, multiplication, and division the easiest.\n",
+        "They work just like regular math but done by Python.\n",
+        "\n",
         "5. Which statistical measure (mean/median/mode) makes most intuitive sense to you?\n",
+        "\n",
+        "The mean makes the most sense to me.\n",
+        "It's just the average of all the numbers\n",
+        "\n",
         "6. The correlation value you computed—what does it **mean** physically?\n",
+        "\n",
+        "Correlation tells how two things move together\n",
+        "A positive value means they increase or decrease at the same time\n",
+        "A negative value means when one goes up, the other goes down\n",
+        "A value near zero means there's little or no relationship.\n",
+        "\n",
         "7. Is there anything that still feels confusing about Python basics?\n",
+        "\n",
+        "Sometimes I still get confused about errors and how to read them.\n",
+        "I also mix up lists, arrays, and how to index them.\n",
+        "Remembering the right syntax can be tricky too\n",
         "\n",
         "Write 4–8 sentences below. This is important for building your own understanding.\n"
       ]
