--- a/notebooks/05_Capstone_Assignment.ipynb
+++ b/notebooks/05_Capstone_Assignment.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/EarthSystem-Science-Lab/python-basics/blob/main/notebooks/05_Capstone_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rsgis2025trupti-wq/python-basics/blob/main/notebooks/05_Capstone_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,7 +93,14 @@
       },
       "outputs": [],
       "source": [
-        "# Q1.1\n"
+        "# Q1.1\n",
+        "# create variables\n",
+        "a = 12\n",
+        "b = 4.7\n",
+        "c = -3\n",
+        "print(f\"a+b = {a+b}\")\n",
+        "print(f\"a*c = {a*c}\n",
+        "print(f\"(a+b)/c = {(a+b)/c}\")"
       ]
     },
     {
@@ -121,16 +128,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "0d96bd28",
       "metadata": {
-        "id": "0d96bd28"
+        "id": "0d96bd28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a584a33f-1861-4d6f-84a7-0af7f99a97cb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean: 28.400000000000002\n",
+            "Median: 28.4\n",
+            "Minimum: 27.8\n",
+            "Maximum: 29.1\n",
+            "Standard Deviation: 0.416333199893227\n"
+          ]
+        }
+      ],
       "source": [
         "# Q1.2\n",
         "sst = [27.9,28.0,28.4,28.6,28.8,29.1,28.7,28.3,27.8]\n",
-        "\n"
+        "\n",
+        "mean_sst = np.mean(sst)\n",
+        "median_sst = np.median(sst)\n",
+        "min_sst = np.min(sst)\n",
+        "max_sst = np.max(sst)\n",
+        "std_sst = np.std(sst)\n",
+        "\n",
+        "print(f\"Mean: {mean_sst}\")\n",
+        "print(f\"Median: {median_sst}\")\n",
+        "print(f\"Minimum: {min_sst}\")\n",
+        "print(f\"Maximum: {max_sst}\")\n",
+        "print(f\"Standard Deviation: {std_sst}\")\n"
       ]
     },
     {
@@ -155,14 +189,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "4dab8705",
       "metadata": {
-        "id": "4dab8705"
+        "id": "4dab8705",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "12f508eb-3e88-48de-b661-d4ee1f5f748b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Day 1: 27.9\n",
+            "Day 2: 28.0\n",
+            "Day 3: 28.4\n",
+            "Day 4: 28.6\n",
+            "Day 5: 28.8\n",
+            "Day 6: 29.1\n",
+            "Day 7: 28.7\n",
+            "Day 8: 28.3\n",
+            "Day 9: 27.8\n"
+          ]
+        }
+      ],
       "source": [
-        "# Q2.1\n"
+        "# Q2.1\n",
+        "sst = [27.9,28.0,28.4,28.6,28.8,29.1,28.7,28.3,27.8] # sst list here\n",
+        "\n",
+        "for i in range(len(sst)):\n",
+        "    print(f\"Day {i+1}: {sst[i]}\")\n"
       ]
     },
     {
@@ -184,14 +242,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "4b213a61",
       "metadata": {
-        "id": "4b213a61"
+        "id": "4b213a61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce471f55-9776-4667-fd92-81fc5a3dfb99"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Day 1: NORMAL\n",
+            "Day 2: WARM\n",
+            "Day 3: WARM\n",
+            "Day 4: WARM\n",
+            "Day 5: WARM\n",
+            "Day 6: HOT\n",
+            "Day 7: WARM\n",
+            "Day 8: WARM\n",
+            "Day 9: NORMAL\n",
+            "\n",
+            "Counts:\n",
+            "HOT: 1\n",
+            "WARM: 6\n",
+            "NORMAL: 2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Q2.2\n"
+        "# Q2.2\n",
+        "hot_count = 0\n",
+        "warm_count = 0\n",
+        "normal_count = 0\n",
+        "\n",
+        "\n",
+        "for i, temp in enumerate(sst):\n",
+        "    if temp > 29:\n",
+        "        print(f\"Day {i+1}: HOT\")\n",
+        "        hot_count += 1\n",
+        "    elif 28 <= temp <= 29:  # Corrected condition for WARM (inclusive)\n",
+        "        print(f\"Day {i+1}: WARM\")\n",
+        "        warm_count += 1\n",
+        "    else: # All other cases are NORMAL (temp < 28)\n",
+        "        print(f\"Day {i+1}: NORMAL\")\n",
+        "        normal_count += 1\n",
+        "\n",
+        "print(f\"\\nCounts:\")\n",
+        "print(f\"HOT: {hot_count}\")\n",
+        "print(f\"WARM: {warm_count}\")\n",
+        "print(f\"NORMAL: {normal_count}\")"
       ]
     },
     {
@@ -494,6 +597,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
